# zwin

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.adoc  meson.build  meson_options.txt
.github/: CODEOWNERS
.github/workflows/: lint.yaml  test.yaml
docs/: CONTRIBUTING.adoc
docs/protocol/zigen/: zgn_compositor.adoc  zgn_data_device.adoc  zgn_data_device_manager.adoc  zgn_data_offer.adoc  zgn_data_source.adoc  zgn_keyboard.adoc  zgn_ray.adoc  zgn_seat.adoc  zgn_virtual_object.adoc
docs/protocol/zigen-opengl/: zgn_opengl.adoc  zgn_opengl_component.adoc  zgn_opengl_element_array_buffer.adoc  zgn_opengl_shader_program.adoc  zgn_opengl_texture.adoc  zgn_opengl_vertex_buffer.adoc
docs/protocol/zigen-shell/: zgn_background.adoc  zgn_cuboid_window.adoc  zgn_shell.adoc
docs/protocol/zwin/: zwn_compositor.adoc  zwn_keyboard.adoc  zwn_ray.adoc  zwn_seat.adoc  zwn_virtual_object.adoc
docs/protocol/zwin-opengl/: zwn_opengl.adoc  zwn_opengl_component.adoc  zwn_opengl_element_array_buffer.adoc  zwn_opengl_shader_program.adoc  zwn_opengl_texture.adoc  zwn_opengl_vertex_buffer.adoc
docs/protocol/zwin-shell/: zwn_cuboid_window.adoc  zwn_shell.adoc
protocol/: meson.build  zigen-gles-v32.xml  zigen-opengl.xml  zigen-shell.xml  zigen.xml  zwin-gl.xml  zwin-gles-v32.xml  zwin-opengl.xml  zwin-shell.xml  zwin.xml
src/: meson.build  zigen-util.h  zigen-version.h.in
tests/: array-convert-test.c  meson.build  scan-xml-test.sh  test-runner.c  test-runner.h  validate-xml-test.c
